--- a/lab2/Jenkinsfile
+++ b/lab2/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
             steps {
                sh '''
                    virtualenv .venv
-                   source .venv/bin/activate
+                   source ./.venv/bin/activate
                    pip install -r requirements.txt
                    '''
                }
