--- a/lab2/Jenkinsfile
+++ b/lab2/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
         stage('Setup Environment') {
             steps {
                sh '''
+                   #!/bin/bash
                    virtualenv .venv
                    source ./.venv/bin/activate
                    pip install -r requirements.txt
