--- a/lab2/Jenkinsfile
+++ b/lab2/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
                sh '''
                    #!/bin/bash
                    virtualenv .venv
-                   source ./.venv/bin/activate
+                   . .venv/bin/activate
                    pip install -r requirements.txt
                    '''
                }
