--- a/lab2/Jenkinsfile
+++ b/lab2/Jenkinsfile
@@ -8,7 +8,6 @@ pipeline {
                    virtualenv .venv
                    . .venv/bin/activate
                    pip install -r lab2/requirements.txt
-                   pip install numpy
                    echo 'OK'
                    '''
                }
@@ -16,6 +15,7 @@ pipeline {
         stage('Generate data') {
             steps {
                 echo 'Start generate data'
+                sh "pip install numpy"
                 sh "python3 lab2/data_creation.py"
                 echo 'OK'
             }
